handle iframe nastiness in nav bootstrap
wordpress ends up loading the blog inside of an iframe, so
if we just let the nav links behave normally, they won't actually
change the window location (they will just load the site content
inside the iframe). This guarantees that we are actually redirected
to the correct link.

--- a/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
+++ b/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
@@ -18,7 +18,12 @@ class ChefSteps.NavigationBootstrap
   loadHeader: (response) =>
     jQuery(@headerTarget).html(response)
 
+  fixNavLinks: =>
+    $('body .nav a').live 'click', ->
+      top.location = $(this).attr('href')
+
   bootstrap: =>
     @loadCSS()
     @getHeader()
+    @fixNavLinks()
 
