--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -3,7 +3,8 @@
     .row
       .span8
         %h1= raw activity.title
-        - if activity.description.present?
+        - if activity.has_description?
+          -# description.present?
           :markdown
             #{activity.description}
       .span4
