put admin.js and admin.css into active_admin

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -8,8 +8,15 @@
 // $sidebar-width: 242px;
 
 // Active Admin's got SASS!
-@import "active_admin/mixins";
-@import "active_admin/base";
+@import active_admin/mixins
+@import active_admin/base
+
+@import compass/css3/border-radius
+@import compass/css3/box-shadow
+
+@import twitter/bootstrap/variables
+@import twitter/bootstrap/mixins
+@import twitter/bootstrap/dropdowns
 
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
