--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -65,7 +65,7 @@
               %ul.equipment
                 - group.each do |item|
                   - if item.product_url?
-                    %li.bullet-for-sale= link_to item.title, item.product_url
+                    %li.bullet-for-sale= link_to item.title, item.product_url, { target: "_blank"}
                   - else
                     %li= item.title
         - if activity.optional_equipment.present?
