DRY the equipment list

--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -62,12 +62,7 @@
         .row
           - activity.required_equipment.in_groups(2, false).each do |group|
             .span2
-              %ul.equipment
-                - group.each do |item|
-                  - if item.product_url?
-                    %li.bullet-for-sale= link_to item.title, item.product_url, { target: "_blank"}
-                  - else
-                    %li= item.title
+              = render 'equipment_list', equipment: group
         - if activity.optional_equipment.present?
           .row
             .span4
@@ -75,10 +70,4 @@
           .row
             - activity.optional_equipment.in_groups(2, false).each do |group|
               .span2
-                %ul.equipment
-                  - group.each do |item|
-                    - if item.product_url?
-                      %li.bullet-for-sale= link_to item.title, item.product_url, { target: "_blank"}
-                    - else
-                      %li= item.title
-
+                = render 'equipment_list', equipment: group
