--- a/app/views/admin/recipes/_form.html.haml
+++ b/app/views/admin/recipes/_form.html.haml
@@ -28,20 +28,20 @@
       %tr
         %th Title
         %th Directions (Markdown or HTML)
-        %th Image ID
-        %th Youtube ID
+        %th Image Id
+        %th Youtube Id
       %tr#step-row
         %td= text_field_tag 'recipe[steps][][title]'
-        %td= text_area_tag 'recipe[steps][][directions]', nil, size: '25x15'
+        %td= text_area_tag 'recipe[steps][][directions]', nil, rows: 10
         %td= text_field_tag 'recipe[steps][][image_id]'
         %td= text_field_tag 'recipe[steps][][youtube_id]'
       - @recipe.steps.each do |step|
         %tr
           %td= text_field_tag 'recipe[steps][][title]', step.title
-          %td= text_area_tag 'recipe[steps][][directions]', step.directions, rows: 15
+          %td= text_area_tag 'recipe[steps][][directions]', step.directions, rows: 10
           %td= text_field_tag 'recipe[steps][][image_id]', step.image_id
           %td
-            = text_field_tag 'recipe[stepss][][youtube]', step.youtube_id
+            = text_field_tag 'recipe[steps][][youtube_id]', step.youtube_id
             = button_tag 'X', {data: { behavior: 'remove-element', 'remove-target' => 'tr'}}
 
   = f.actions do
