--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -34,3 +34,10 @@
 // .active_admin       applies to any Active Admin namespace
 // .admin_namespace    applies to the admin namespace (eg: /admin)
 // .other_namespace    applies to a custom namespace named other (eg: /other)
+
+.admin_namespace
+
+  table.nested-records
+    // hide delete button for template row
+    tr:nth-child(2) [data-behavior="remove-element"]
+      display: none
