--- a/app/views/admin/recipes/_form.html.haml
+++ b/app/views/admin/recipes/_form.html.haml
@@ -5,26 +5,18 @@
     = f.input :activity
   = f.inputs name: "Ingredients" do
     %li= copy_button('Add Ingredient', '#ingredient-row', 'table#ingredients')
-    %table#ingredients
+    %table.nested-records#ingredients
       %tr
         %th Ingredient
         %th Quantity
         %th Unit
-      %tr#ingredient-row
-        %td= text_field_tag 'recipe[ingredients][][title]', nil, {data: {source: Ingredient.titles, provide: 'typeahead'}}
-        %td= text_field_tag 'recipe[ingredients][][quantity]'
-        %td= text_field_tag 'recipe[ingredients][][unit]'
+      = render 'ingredient_form', :ingredient => nil
       - @recipe.ingredients.each do |ingredient|
-        %tr
-          %td= text_field_tag 'recipe[ingredients][][title]', ingredient.title
-          %td= text_field_tag 'recipe[ingredients][][quantity]', ingredient.quantity
-          %td
-            = text_field_tag 'recipe[ingredients][][unit]', ingredient.unit
-            = button_tag 'X', {data: { behavior: 'remove-element', 'remove-target' => 'tr'}}
+        = render 'ingredient_form', :ingredient => ingredient
 
   = f.inputs name: "Steps" do
     %li= copy_button('Add Step', '#step-row', 'table#steps')
-    %table#steps
+    %table.nested-records#steps
       %tr
         %th Title
         %th Directions (Markdown or HTML)
