--- a/app/views/admin/recipes/_step_form.html.haml
+++ b/app/views/admin/recipes/_step_form.html.haml
@@ -16,4 +16,4 @@
   %td= text_field_tag 'recipe[steps][][image_id]', image_id
   %td
     = text_field_tag 'recipe[steps][][youtube_id]', youtube_id
-    = button_tag 'X', {data: { behavior: 'remove-element', 'remove-target' => 'tr'}}
+    = remove_button 'X', 'tr'
