hide entire template row

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -38,6 +38,6 @@
 .admin_namespace
 
   table.nested-records
-    // hide delete button for template row
-    tr:nth-child(2) [data-behavior="remove-element"]
+    // hide template row
+    tr:nth-child(2)
       display: none
