get sorting working

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -38,3 +38,7 @@
   table#steps
     tr:nth-child(even)
       background: $grayLight
+
+  table.sortable
+    tr:not(#step-row)
+      cursor: move
