turn off autocomplete so it doesn't compete

--- a/app/views/admin/recipes/_ingredient_form.html.haml
+++ b/app/views/admin/recipes/_ingredient_form.html.haml
@@ -4,6 +4,7 @@
   row_id = 'ingredient-row' if is_template
   title_data_attrs = {
     data: {source: Ingredient.titles, provide: 'typeahead'},
+    autocomplete: 'off'
   }
 
   title = ingredient.title unless is_template
