better typeahead styling

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -41,3 +41,16 @@
     // hide template row
     tr:nth-child(2)
       display: none
+
+  ul.typeahead
+    list-style-type: none
+    padding-left: 0
+
+    li.active
+      a
+        color: white
+
+    a
+      text-decoration: none
+      padding: 5px
+
