--- a/app/views/admin/recipes/_show.html.haml
+++ b/app/views/admin/recipes/_show.html.haml
@@ -22,6 +22,6 @@
             %th Steps
             %td
               %ol
-                - recipe.steps.each do |step|
-                  %li= link_to step.title, admin_step_path(step)
+                - recipe.steps.each_with_index do |step, index|
+                  %li= link_to step.title(index) , admin_step_path(step)
 
