--- a/app/views/admin/recipes/_form.html.haml
+++ b/app/views/admin/recipes/_form.html.haml
@@ -27,6 +27,5 @@
         = render 'step_form', step: step
 
   = f.actions do
-    = f.action :submit, as: :button
-    = f.action :cancel, as: :link
-
+    = f.action :submit
+    = f.action :cancel, wrapper_html: {class: :cancel}, :label => 'Cancel'
