--- a/app/views/admin/recipes/_ingredient_form.html.haml
+++ b/app/views/admin/recipes/_ingredient_form.html.haml
@@ -16,4 +16,5 @@
   %td= text_field_tag 'recipe[ingredients][][quantity]', quantity
   %td
     = text_field_tag 'recipe[ingredients][][unit]', unit
-    = remove_button 'X', 'tr'
+    = remove_button 'tr'
+    %i.icon-align-justify
