use font-awesome instead of bootstrap sprites

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -17,7 +17,8 @@
 @import twitter/bootstrap/variables
 @import twitter/bootstrap/mixins
 @import twitter/bootstrap/dropdowns
-@import twitter/bootstrap/sprites
+
+@import font-awesome
 
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
@@ -66,8 +67,14 @@
     .ui-sortable-helper
       background: lighten($yellow, 40%) !important
 
-  [data-behavior=remove-element]
-    padding: 3px 2px
+    [data-behavior=remove-element]
+      padding: 1px 2px 0 2px
 
-  i.icon-align-justify
-    margin: 1px 6px
+    i.icon-remove
+      font-size: 14px
+
+    i.icon-reorder
+      float: right
+      margin-top: 6px
+      font-size: 16px
+      cursor: move
