--- a/app/views/admin/recipes/_ingredient_form.html.haml
+++ b/app/views/admin/recipes/_ingredient_form.html.haml
@@ -17,4 +17,4 @@
   %td
     = text_field_tag 'recipe[ingredients][][unit]', unit
     = remove_button 'tr'
-    %i.icon-align-justify
+    = reorder_icon
