use root_url for main chefsteps logo

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,7 +8,7 @@
     .navbar-inner
       .container
         .nav.brand-container
-          %a.brand{href: root_path, target: '_top'}
+          %a.brand{href: root_url, target: '_top'}
             = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
           .brand-byline
             brought to you by
