fix remove_button call

--- a/app/views/admin/activities/_equipment_form.html.haml
+++ b/app/views/admin/activities/_equipment_form.html.haml
@@ -16,4 +16,4 @@
   %td= check_box_tag('activity[equipment][][optional]', true, checked = optional)
   %td
     = text_field_tag 'activity[equipment][][product_url]', product_url
-    = remove_button 'X', 'tr'
+    = remove_button 'tr'
