add sortable to equipment table

--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -8,7 +8,7 @@
 
   = f.inputs name: "Equipment" do
     %li= copy_button('Add Equipment', '#equipment-row', 'table#equipment')
-    %table.nested-records#equipment
+    %table.nested-records.sortable#equipment
       %tr
         %th Title
         %th Optional?
