--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -1,10 +1,11 @@
 = semantic_form_for [:admin, @activity] do |f|
-  = f.inputs name: "Recipe Details" do
+  = f.inputs name: "Activity Details" do
     = f.input :title
     = f.input :description
     = f.input :youtube_id
     = f.input :timing
     = f.input :difficulty, as: :select, collection: Activity.difficulty_enum
+  = f.inputs name: "Equipment" do
     %li= copy_button('Add Equipment', '#equipment-row', 'table#equipment')
     %table.nested-records#equipment
       %tr
