--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -14,7 +14,7 @@
         %th Optional?
         %th Product URL
       = render 'equipment_form', equipment: nil
-      - @activity.equipment.each do |equipment|
+      - @activity.equipment.ordered.each do |equipment|
         = render 'equipment_form', equipment: equipment
 
   = f.actions do
