hook up title call with index in user views

--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -1,8 +1,7 @@
 .row.step
   .span4
     %h3
-      :erb
-        <strong><%="Step #{count}"%></strong>
+      %strong= step.title(count)
     - if step.ingredients.any?
       .well
         %h6 Ingredients
