--- a/app/views/activities/_step_by_step.html.haml
+++ b/app/views/activities/_step_by_step.html.haml
@@ -5,7 +5,7 @@
         .row
           .span12
             - recipe.steps.each_with_index do |step, i|
-              = render 'step', step: step, count: i+1
+              = render 'step', step: step, count: i
               .row
                 .span12
                   .horizontal-divider
@@ -15,7 +15,7 @@
         .span12
           %h4 Assembly Steps
       - activity.steps.each_with_index do |step, i|
-        = render 'step', step: step, count: i+1
+        = render 'step', step: step, count: i
         .row
           .span12
             .horizontal-divider
