--- a/app/views/admin/activities/_show.html.haml
+++ b/app/views/admin/activities/_show.html.haml
@@ -47,6 +47,6 @@
             %th Steps
             %td
               %ol
-                - activity.steps.map do |step|
-                  %li= link_to step.title, admin_step_path(step)
+                - activity.steps.each_with_index do |step,index|
+                  %li= link_to step.title(index), admin_step_path(step)
 
