--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -16,6 +16,15 @@
       - @activity.equipment.ordered.each do |equipment|
         = render 'equipment_form', equipment: equipment
 
+  = f.inputs name: "Recipes" do
+    %li= copy_button('Add Recipe', '#recipe-row', 'table#recipes')
+    %table.nested-records#recipes
+      %tr
+        %th
+      = render 'recipe_form', recipe: nil
+      - @activity.recipes.each do |recipe|
+        = render 'recipe_form', recipe: recipe
+
   = f.actions do
     = f.action :submit
     = f.action :cancel, wrapper_html: {class: :cancel}, :label => 'Cancel'
