--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -81,3 +81,10 @@ body.admin_namespace
 
   a.admin-button, button.admin-button
     @include light-button
+
+  .two-button-row
+    overflow: hidden
+    a, button
+      float: right
+      &:first-child
+        float: left
