--- a/app/views/admin/recipes/_form.html.haml
+++ b/app/views/admin/recipes/_form.html.haml
@@ -15,8 +15,9 @@
         = render 'ingredient_form', ingredient: ingredient
 
   = f.inputs name: "Steps" do
-    %li
+    %li.two-button-row
       = copy_button 'Add Step', '#step-row', 'table#steps'
+      = admin_button 'Edit ingredients associated with steps', '#'
     %table.nested-records.sortable#steps
       %tr
         %th Title
