--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -1,7 +1,7 @@
 = semantic_form_for [:admin, @activity] do |f|
   = f.inputs name: "Activity Details" do
     = f.input :title
-    = f.input :description
+    = f.input :description, label: "Description (Markdown)"
     = f.input :youtube_id
     = f.input :timing
     = f.input :difficulty, as: :select, collection: Activity.difficulty_enum
@@ -27,5 +27,5 @@
 
   = f.actions do
     = f.action :submit
-    = f.action :cancel, wrapper_html: {class: :cancel}, :label => 'Cancel'
+    = f.action :cancel, wrapper_html: {class: :cancel}, label: 'Cancel'
 
