form for adding ingredients to steps

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -88,3 +88,7 @@ body.admin_namespace
       float: right
       &:first-child
         float: left
+
+  .step-ingredients
+    li
+      margin-left: 20px
