hide nested-records tables if they are empty

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -38,6 +38,7 @@
 
 body.admin_namespace
   table.nested-records
+    display: none
     // hide template row
     tr:nth-child(2)
       display: none
@@ -89,6 +90,7 @@ body.admin_namespace
       &:first-child
         float: left
 
+.admin_recipes.associate_ingredients
   .step-ingredients
     li
       margin-left: 20px
