remove border and add left/right table padding

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -38,6 +38,8 @@
 
 .admin_namespace
   table.nested-records
+    padding: 0 1.4em
+
     // hide template row
     tr:nth-child(2)
       display: none
@@ -60,9 +62,6 @@
         background: white
       &:nth-child(1)
         background: none
-
-    td
-      border-top: 1px solid black
 
     .ui-sortable-helper
       background: lighten($yellow, 40%) !important
