--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -7,7 +7,7 @@
     = f.input :difficulty, as: :select, collection: Activity.difficulty_enum
   = f.inputs name: "Equipment" do
     %li= copy_button('Add Equipment', '#equipment-row', 'table#equipment')
-    %table.nested-records.sortable#equipment
+    = sortable_table('equipment') do
       %tr
         %th Title
         %th Optional?
@@ -18,7 +18,7 @@
 
   = f.inputs name: "Recipes" do
     %li= copy_button('Add Recipe', '#recipe-row', 'table#recipes')
-    %table.nested-records.sortable#recipes
+    = sortable_table('recipes') do
       %tr
         %th
       = render 'recipe_form', recipe: nil
