remove background in sections with sortable tables

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -59,7 +59,7 @@
   table.sortable
     tr
       &:nth-child(odd)
-        background: white
+        background: #f4f4f4
       &:nth-child(1)
         background: none
 
@@ -77,3 +77,6 @@
       margin-top: 6px
       font-size: 16px
       cursor: move
+
+  fieldset.inputs.no-background
+    background: none
