--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -5,7 +5,7 @@
     = f.input :youtube_id
     = f.input :timing
     = f.input :difficulty, as: :select, collection: Activity.difficulty_enum
-  = f.inputs name: "Equipment" do
+  = section("Equipment", f) do
     %li= copy_button('Add Equipment', '#equipment-row', 'table#equipment')
     = sortable_table('equipment') do
       %tr
@@ -16,7 +16,7 @@
       - @activity.equipment.ordered.each do |equipment|
         = render 'equipment_form', equipment: equipment
 
-  = f.inputs name: "Recipes" do
+  = section("Recipes", f) do
     %li= copy_button('Add Recipe', '#recipe-row', 'table#recipes')
     = sortable_table('recipes') do
       %tr
