--- a/app/views/admin/recipes/_form.html.haml
+++ b/app/views/admin/recipes/_form.html.haml
@@ -3,7 +3,7 @@
     = f.input :title
     = f.input :yield
     = f.input :activity
-  = f.inputs name: "Ingredients" do
+  = section("Ingredients", f) do
     %li= copy_button('Add Ingredient', '#ingredient-row', 'table#ingredients')
     = sortable_table('ingredients') do
       %tr
@@ -14,7 +14,7 @@
       - @recipe.ingredients.ordered.each do |ingredient|
         = render 'ingredient_form', ingredient: ingredient
 
-  = f.inputs name: "Steps" do
+  = section("Steps", f) do
     %li= copy_button('Add Step', '#step-row', 'table#steps')
     = sortable_table('steps') do
       %tr
