fix top level class selector

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -92,7 +92,7 @@ body.admin_namespace
       &:first-child
         float: left
 
-.admin_recipes.associate_ingredients
+.admin_recipes.associated_ingredients
   .step-ingredients
     li
       margin-left: 20px
