use section and table helpers

--- a/app/views/admin/recipes/_step_ingredient_form.html.haml
+++ b/app/views/admin/recipes/_step_ingredient_form.html.haml
@@ -3,7 +3,7 @@
   field_name_prefix = "step_ingredients[#{step.id}][]"
 
 %li= copy_button 'Add Ingredient To Step', "##{row_id}", "table#step-#{count}-ingredients"
-%table.nested-records.sortable{id: "step-#{count}-ingredients"}
+= sortable_table("step-#{count}-ingredients") do
   %tr
     %th Ingredient
     %th Quantity
